--- a/src/app/features/pollster-panel/components/multi-select/multi-select.component.html
+++ b/src/app/features/pollster-panel/components/multi-select/multi-select.component.html
@@ -44,7 +44,7 @@
                   class="w-1/6 border-2 border-t border-b border-r border-l mb-2 leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-4 "
                   type="checkbox"
                   value=""
-                  placeholder=""
+                  placeholder="Password"
                   aria-label="Full name"
                 />
                 <input
