--- a/src/app/features/inquiry-header/inquiry-header.component.html
+++ b/src/app/features/inquiry-header/inquiry-header.component.html
@@ -12,6 +12,7 @@
         style="border-radius: 5px; cursor: pointer; padding-top: 3px"
       />
       <img
+      (click)="navigateTo('pollster-panel')"
         src="../assets/images/header/inquiry-app-name.svg"
         width="120"
         height="60"
