--- a/src/app/features/pollster-panel/components/tables/tables.component.html
+++ b/src/app/features/pollster-panel/components/tables/tables.component.html
@@ -23,8 +23,8 @@
             <div class="text-lg w-1/2 flex justify-between h-6 mb-1">
               <div class="w-2/3 flex justify-center h-6 ">
                  <div class="cursor-pointer w-16 flex items-center justify-center" >
-                  <span class="text-gray-400 text-base font-normal hover:text-gray-600 hover:font-medium flex items-center"
-                    >Preview</span
+                  <button class="text-gray-400 text-base font-normal hover:text-gray-600 hover:font-medium flex items-center" (click)="navigate( inquiryDetail.action)"
+                    >Preview</button
                   >
                 </div>
               </div>
