--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -92,3 +92,11 @@
     justify-content: center;
     z-index: 1;
 }
+
+.widthContainer4 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+}
