--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,8 @@
     </div>
   </div>
   @if (!(isLogin$ | async))  {
-    <div [ngClass]="{ widthContainer3: !(isLogin$ | async)}"><router-outlet></router-outlet></div>
+    <div [ngClass]="{ widthContainer3: !(isLogin$ | async),widthContainer4: (isCenterView$ | async)}"><router-outlet></router-outlet></div>
   } @else {
-    <div [ngClass]="{ widthContainer: !isSidebar, widthContainer2: isSidebar }"><router-outlet></router-outlet></div>
+    <div [ngClass]="{ widthContainer: !isSidebar, widthContainer2: isSidebar,widthContainer4: (isCenterView$ | async) }"><router-outlet></router-outlet></div>
   }
 </section>
