--- a/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.html
+++ b/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.html
@@ -1,32 +1,35 @@
-<div class="container_fom_to_fill">
-  <div class="title">Inquiry name: {{ inquiry.name }}</div>
-  <form [formGroup]="formGroup" class="formGroup">
-    <div formArrayName="answers">
-      <inq-tab-group [selectedIndex]="tabIndex" [@fadeIn]="state">
-        @for (answer of formArrayControls.controls; track answer; let index = $index) {
-          <inq-tab [title]="index" [numberOfQuestions]="numberOfQuestions">
-            <inq-multiselect-answer [item]="answer" [itemIndex]="index"></inq-multiselect-answer>
-            <inq-scale-answer [item]="answer" [itemIndex]="index"></inq-scale-answer>
-            <inq-shortquestion-answer [item]="answer" [itemIndex]="index"></inq-shortquestion-answer>
-            <inq-singleselect-answer [item]="answer" [itemIndex]="index"></inq-singleselect-answer>
-          </inq-tab>
+@if(inquiry){
+  <div class="container_fom_to_fill">
+    <div class="title">Inquiry name: {{ inquiry.name }}</div>
+    <form [formGroup]="formGroup" class="formGroup">
+      <div formArrayName="answers">
+        <inq-tab-group [selectedIndex]="tabIndex" [@fadeIn]="state">
+          @for (answer of formArrayControls.controls; track answer; let index = $index) {
+            <inq-tab [title]="index" [numberOfQuestions]="numberOfQuestions">
+              <inq-multiselect-answer [item]="answer" [itemIndex]="index"></inq-multiselect-answer>
+              <inq-scale-answer [item]="answer" [itemIndex]="index"></inq-scale-answer>
+              <inq-shortquestion-answer [item]="answer" [itemIndex]="index"></inq-shortquestion-answer>
+              <inq-singleselect-answer [item]="answer" [itemIndex]="index"></inq-singleselect-answer>
+            </inq-tab>
+          }
+        </inq-tab-group>
+      </div>
+    </form>
+    <div class="mat_dialog_actions">
+      <mat-dialog-actions style="justify-content: end">
+        <button class="buttonCustom" mat-button mat-dialog-close>Cancel</button>
+  
+        @if (isNoButtonNext) {
+          <button class="buttonCustom" mat-button (click)="changeTabIndex()" [disabled]="!isNoButtonNext">
+            Next
+          </button>
         }
-      </inq-tab-group>
+  
+        @if (isNoButtonSave) {
+          <button class="buttonCustom" mat-button  (click)="saveAnswerForm()">Save</button>
+        }
+      </mat-dialog-actions>
     </div>
-  </form>
-  <div class="mat_dialog_actions">
-    <mat-dialog-actions style="justify-content: end">
-      <button class="buttonCustom" mat-button mat-dialog-close>Cancel</button>
-
-      @if (isNoButtonNext) {
-        <button class="buttonCustom" mat-button (click)="changeTabIndex()" [disabled]="!isNoButtonNext">
-          Next
-        </button>
-      }
-
-      @if (isNoButtonSave) {
-        <button class="buttonCustom" mat-button  (click)="saveAnswerForm()">Save</button>
-      }
-    </mat-dialog-actions>
   </div>
-</div>
+}
+
