--- a/src/styles.css
+++ b/src/styles.css
@@ -179,7 +179,8 @@ input:focus, textarea:focus, select:focus{
   text-align: center;
   justify-content: center;
   font-family: Roboto, sans-serif;
-  background-color: rgb(251, 252, 255) !important;
+  background: rgb(255, 255, 255);
+    background: linear-gradient(275deg, rgba(255, 255, 255, 1) 19%, rgba(222, 226, 230, 1) 73%);
 }
 
 .question_form_to_fill {
